package org.ulrica.domain;

public enum ApplicationState {
    WELCOME,
    MAIN_MENU,
    CAR_PROFILE_MENU,
    CREATE_CAR_PROFILE,
    EDIT_CAR_PROFILE,
    DELETE_CAR_PROFILE,
    ACTION_MENU,
    EXIT
} 